k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetings_backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greetings_backend
  template:
    metadata:
      labels:
        app: greetings_backend
    spec:
      containers:
      - name: greetings_backend
      image: grettings_backend:latest
      ports:
      - containerPort: 80
