k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greetings_backend
  labels:
    service: greetings_backend
spec:
  selector:
    app: greetings_backend
  ports:
    - port: 80
