k8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: greetings.test
  http:
    paths:
    - path: /
      backend:
        serviceName: greetings_backend
        servicePort: 80
